kube-crash-course/app2/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: app1
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx
